# eu-lex-etl

./: README.md  pyproject.toml
eu_lex_etl/: __init__.py  etl.py  schemas.py
