[tool.poetry]
name = "eu-lex-etl"
version = "0.1.0"
description = ""
authors = ["Victor Costa <victorcrcosta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
